# fish-ecology-assistant

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CHEATSHEET.md  CONTRIBUTING.md  Dockerfile  GUIDE.md  HEARTBEAT.md  LICENSE  PROJECT_MANIFEST.md  RE.md  README.md  README.zh.md  SQLite_操作手册.md  USERGUIDE.md  __init__.py  _api_stats.py  _tmp_csearch_quick.py  _tmp_csearch_test.py  _tmp_csearch_tribolodon.py  _tmp_csearch_v2.py  _tmp_csearch_v3.py  build_echarts.py  check_html.py  coordination.yaml  docker-compose.yml  export_csv.py  extract_descs.py  fix_json.py  gen_from_template.py  gen_report.py  make_video.py  mkvid.py  push.bat  pyproject.toml  raw_data.py  report_cn.html  report_en.html  scrape_all.py  (+8 more)
.reasonix/: SUMMARY.en.md  SUMMARY.md  clash-proxy-rule.md  setup-migrate.ps1
_bayesian/: __init__.py  distributions.py  engine.py  inference.py  run_self_check.py  self_check.py
_shared/: __init__.py  adapter_protocol.py  auditor.py  base_adapter.py  config_loader.py  errors.py  path_init.py  pipeline.py  test_setup.py  types.py
config/: agent.yaml  agents.yaml  bayesian_priors.yaml  component_registry.yaml  coordination.yaml  evolution.yaml  fish_species_kb.yaml  fish_species_kb.yaml.bak  mcp_servers.yaml  meso_agent.yaml  models.yaml  species_variants.yaml  traits_schema.sql  wuxing.yaml  yangtze_fish_species.yaml
data/: species.db  species.db-journal
docs/: ARCHITECTURE.md  CHINA_FISH_CONSERVATION.md  FISH_DATABASES_GUIDE.md  FISH_DATABASES_GUIDE.zh.md  SKILL_PIPELINE.md  WORKFLOWS.md  刘凯课题组成果回写_20260613.md
fish_ecology_assistant/: __init__.py  api.py  db.py
fishkb/: README.md  pyproject.toml
fishkb/config/knowledge_base/species/: ochetobius_elongatus.md
research_output/: session-2026-06-06-07-comprehensive-summary.md  yangtze-fishing-ban-ecological-assessment.md  长江十年禁渔生态成效评估.md
scripts/: add_literature.py  audit_boundaries.py  audit_downsides.py  audit_wiring.py  benchmark.py  benchmark_comparison.py  benchmark_search.py  boundary_tests.py  check_bayesian_integration.py  (+37 more)
(+181 files in other folders)
